@@ -121,6 +121,7 @@ easier to use. The changes are:
 - Discworld II BMV decoding support
 - VBLE Decoder
 - OS X Video Decoder Acceleration (VDA) support
+- compact output in ffprobe
 
 
 version 0.8:
